--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,14 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "mongoose": "^8.9.3",
+    "sanitize-html": "^2.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
